button mobile fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -4715,11 +4715,11 @@ Menu Mobile style's
 .z-bigger-mobile2{
     padding-top: 5%;
 }
-#slide-140-layer-3, #slide-140-layer-4, #deskArrow, #deskContact, #deskContact2, .mobileDis{
+#slide-140-layer-3, #deskArrow, #deskContact, #deskContact2, .mobileDis{
     display:none;
 }
 #mobileArrow, #mobileContact, #mobileContact2, #slide-140-layer-5{
-    display:block;
+    display:inline;
 }
 .link-down{
     bottom:22%;
